# OttDate

./: CMakeLists.txt  OttDateConfig.cmake.in  OttDateConfigVersion.cmake.in  README.md  dependencies.txt  fossa.h  license.txt  main.cpp  ottdate.c  ottdate.cpp  ottdate.hpp  ottdate_statemachine.txt
example/: CMakeLists.txt  main.cpp
